# electrack

./: .gitignore  Cargo.toml  README.md  electrack-module.nix  flake.nix
migrations/: 1_providers_and_prices.sql
src/: domain.rs  http.rs  main.rs  nordpool.rs  price_repository.rs  setup.rs  tibber.rs
